[gd_scene load_steps=6 format=2]

[ext_resource path="res://New Piskel - 2023-08-25T194852.929.png" type="Texture" id=1]
[ext_resource path="res://ShooterJet.gd" type="Script" id=2]
[ext_resource path="res://Audio/teleport-14639.mp3" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 350.036

[sub_resource type="CircleShape2D" id=2]
radius = 354.338

[node name="ShooterJet" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 22, 22 )
z_index = 1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.001
one_shot = true
autostart = true

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
pitch_scale = 1.49
max_distance = 4000.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
